--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^12.1.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.8",
-    "vue": "^3.5.25"
+    "chart.js": "^4.5.1",
+    "vue": "^3.5.25",
+    "vue-chartjs": "^5.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.2",
